force-app/main/default/objects/Custom_Junction_Object__c/Custom_Junction_Object__c.object-meta.xml
<CustomObject>
    <label>Custom Junction Object</label>
    <nameField>
        <label>Custom Junction Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Junction Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>