force-app/main/default/objects/Custom_Junction_Object__c/fields/Custom_Object__c.field-meta.xml
<CustomField>
    <fullName>Custom_Object__c</fullName>
    <label>Custom Object</label>
    <referenceTo>Custom_Object__c</referenceTo>
    <relationshipLabel>Custom Junction Objects</relationshipLabel>
    <relationshipName>Custom_Junction_Objects</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>