force-app/main/default/objects/Custom_Junction_Object__c/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <label>Related Object</label>
    <referenceTo>Related_Object__c</referenceTo>
    <relationshipLabel>Custom Junction Objects</relationshipLabel>
    <relationshipName>Custom_Junction_Objects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>